[package]
name = "toy-airport"
version = "0.1.0"
authors = ["Simeon Widdis <sawiddis@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon_geom = "1.0.4"
nannou = "0.18.1"
ordered-float = "3.4.0"
pathfinding = "4.2.1"
