[package]
name = "toy-airport"
version = "0.2.0"
authors = ["Simeon Widdis <sawiddis@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
lyon_geom = "1.0.4"
rand = "0.8.5"
