[package]
name = "toy-airport"
version = "0.2.0"
authors = ["Simeon Widdis <sawiddis@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
lyon_geom = "1.0.4"
rand = "0.8.5"
